--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,3 @@
-<?php include('PHP/Register.php') ?>
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,7 +17,7 @@
 
   <section class="logina-form-wrap">
     <h1>Facebook</h1>
-    <form class="login-form" action="PHP/signup.php" method="post">
+   <form  name="Register" action="PHP/signup.php" method="post" >
       <label>
         <input type="text" name="firstName" required placeholder="First Name">
       </label>
@@ -68,7 +65,7 @@
       <label>
         <textarea rows="4" cols="31" name="me" placeholder="About You." style="margin: 5px auto 0 auto;"></textarea>
       </label>
-      <input type="submit" value="Register" name="login">
+      <input  type="submit" value="Register" name="signup">
     </form>
   </section>
 </body>
