--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,16 @@
 <form action="PHP/profile.php" method="post">
 	<input type="text" name="search">
 	<input type="submit" value=">>" >
-	
 </form>
+	<form action="PHP/profile.php" method="post">
+	
+	<input type="submit" value="show profile info" name="show">
+	</form>
+	</form>
+	<form action="PHP/profile.php" method="post">
+	
+	<input type="submit" value="browsing user" name="browse">
+	</form>
+
 </body>
 </html>
